# zed-shader-ls

./: Cargo.toml  LICENSE.txt  extension.toml  readme.md
languages/glsl/: config.toml  highlights.scm
languages/hlsl/: config.toml  highlights.scm
languages/wgsl/: config.toml  highlights.scm
src/: lib.rs
