[package]
name = "zed-shader-ls"
description = "A Zed extension for Shader Language Server"
version = "0.2.0"
authors = ["Christian Howe <christianjacobhowe@gmail.com>"]
repository = "https://github.com/cjhowe-us/zed-shader-ls"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
serde_json = "1.0"
